# Whispercpp_flutter

./: .gitattributes  .gitignore  .gitmodules  .pubignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  whispercpp_flutter.cpp
android/src/main/kotlin/com/example/whispercpp_flutter/: Recorder.kt  Wave.kt  WhisperPlugin.kt  WhispercppFlutterPlugin.kt
ios/: whispercpp_flutter.podspec
ios/Classes/: WhisperPlugin.swift  WhispercppFlutterPlugin.swift
lib/: whispercpp_flutter.dart
lib/src/: download_model.dart  method_channel.dart  method_channel_whispercpp_flutter.dart  platform_interface.dart  whisper_model.dart  whispercpp_flutter_platform_interface.dart
test/: download_model_test.dart  plugin_test.dart  whispercpp_flutter_test.dart
